# ansible_bench

./: .gitignore  Code_Setup_Info.md  llamafile_user_guide.md  llm_operation.md  ollama_user_guide  ollama_user_guide.md  pyproject.toml  readme.md  todo.md  tokenizer_info.md
dataset/benchmark100/: benchmark100.md
dataset/benchmark100/ansible-role-bootstrap-buluma/tasks/: main.yml
dataset/benchmark100/ansible-role-epel-buluma/molecule/default/: converge.yml
dataset/example/: playbook1.yaml  playbook2.yaml  playbook3.yaml
dataset/prompts/llamafile_codestral_english_exact/example/ansible-role-docker-master/ansible-role-docker-master/tasks/: docker-compose_prompt.txt  docker-users_prompt.txt  main_prompt.txt
output/llamafile_codestral_english/example/: metadata.yml  playbook1_prompt.txt  playbook2_prompt.txt  playbook3_prompt.txt
output/llamafile_codestral_english_exact/prompts/llamafile_codestral_english_exact/example/: metadata.yml
src/ansible_bench_code/: ansible_generator.py  ansible_generator_config.py  ansible_generator_utils.py  create_benchmark.py  create_benchmark_config.py  llm_abstraction.py  llm_chain.py  prompt_templates.py  quality_assurance.py
src/ansible_bench_code/config/: config.yaml
src/ansible_bench_code/not_in_use/: run_commands.py
src/ansible_bench_code/tests/: test_molecule.py
src/ansible_bench_code/utils/: cli_abstraction.py  config.py  logging_utilities.py  metadata.py
(+3 files in other folders)
